--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@monolithed/logger",
-    "version": "0.0.1",
+    "version": "0.1.0",
     "description": "A simple logger",
     "author": "Alexander Abashkin <monolithed@gmail.com>",
     "license": "MIT",
@@ -9,14 +9,13 @@
         "url": "git@github.com:monolithed/logger.git"
     },
     "scripts": {
-        "test": "npm prune && tsc && mocha tests",
+        "test": "npm prune && tsc && jest",
         "tsc": "tsc"
     },
     "devDependencies": {
-        "@types/mocha": "^8.2.2",
-        "@types/node": "^15.12.5",
+        "@types/jest": "^26.0.24",
         "@types/sinon": "^10.0.2",
-        "mocha": "^7.1.1",
+        "jest": "^27.0.6",
         "sinon": "^11.1.1",
         "typescript": "^4.3.5"
     }
